--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav>
             <a href="#about">About Me</a>
-            <a href="#"></a>
+            <a href="#Work">Work</a>
             <a href="#"></a>
             <a href="#"></a>
         </nav>
@@ -29,7 +29,7 @@
             <h2>About Me</h2>
             <div class ="aboutme">
                 <p>
-                    Hello, my name is Peng Vang.
+                    Hello, my name is Peng Vang. I am a student at University of Minnesota Web Dev Boot Camp.
                 </p>
             </div>
         </section>
