--- a/index.html
+++ b/index.html
@@ -6,23 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href=".\assets\css\style.css" />
 
     <title>Portfolio</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="#about">About Me</a>
-            <a href="#Work">Work</a>
-            <a href="#"></a>
-            <a href="#"></a>
-        </nav>
-    </header>
 
     <div class="introduction">
         <h1>Peng Vang</h1>
     </div>
+
+    <header>
+        <nav>
+            <a href="#about">About Me</a>
+            <a href="#work">Work</a>
+            <a href="#random1">Random1</a>
+            <a href="#random2">Random2</a>
+        </nav>
+    </header>
+
+    <hr>
+    <br>
 
      <main>
         <section id="about">
@@ -36,6 +40,44 @@
             </div>
         </section>
 
+        <section id="work">
+            <h2>Work</h2>
+            <div class="work1">
+                <div>Random</div>
+            </div>
+        </section>
+
+        <section id="random1">
+            <h2>About Me</h2>
+            <div class ="random01">
+                <p>
+                    Hello, my name is Peng Vang. I am a student at University of Minnesota Web Dev Boot Camp.
+                </p>
+
+                <p>This is test test test test test</p>
+            </div>
+        </section>
+
+        <section id="random2">
+            <h2>About Me</h2>
+            <div class ="random02">
+                <p>
+                    Hello, my name is Peng Vang. I am a student at University of Minnesota Web Dev Boot Camp.
+                </p>
+
+                <p>This is test test test test test</p>
+            </div>
+        </section>
      </main>
 </body>
+<br>
+<hr>
+<footer id="contact">
+    <h2>Contact info</h2>
+    <div class="contact">
+        <a href="tel:+5555555555">Contact Number</a>
+        <a href="Mailto:random@random.com">Email</a>
+        <a href="http://github.com/Penguuuu">Github</a>
+    </div>
+</footer>
 </html>
