--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <html>
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href=".\assets\css\style.css" />
+    <script src=".\assets\script\script.js"></script>
 
     <title>Portfolio</title>
 </head>
+
 <body>
 
     <div class="introduction">
         <h1>Peng Vang</h1>
+
     </div>
+    <div class="selfie">Hover</div>
+    <br>
+    <br><br>
 
     <header>
 
@@ -27,72 +34,73 @@
                 <a href="#random2">Random2</a>
                 <a href="#contact">Contact</a>
             </div>
-          </div>
+        </div>
+        <br><br>
+        <div class="self">
+            <button id="displayPicture" class="displayPicture" onclick="displayPicture()">This is Me</button>
+            <br><br>
+            <img id="myPicture" style="display:none;" src="./assets/image/rick.gif">
+            <audio id="myAudio" src="./assets/Rick Roll Sound Effect.mp3"></audio>
+        </div>
     </header>
 
     <hr>
     <br>
 
-     <main>
+    <main>
         <section id="about">
             <h2>About Me</h2>
-            <div class ="aboutme">
+            <div class="aboutMe">
                 <p>
                     Hello, my name is Peng Vang. I am a student at University of Minnesota Web Dev Boot Camp.
                 </p>
-
-                <p>This is test test test test test</p>
             </div>
         </section>
 
-        
+
 
         <section id="exp">
             <h2>Experience</h2>
-            <div class ="exp">
+            <div class="exp">
                 <p>
-                    Hello, my name is Peng Vang. I am a student at University of Minnesota Web Dev Boot Camp.
+                    I have some experience as a programmer, but in the professional field, I have none. I am currently
+                    working as an IT Support.
                 </p>
-
-                <p>This is test test test test test</p>
             </div>
         </section>
 
         <section id="random1">
             <h2>Random</h2>
-            <div class ="random01">
+            <div class="random01">
                 <p>
-                    Hello, my name is Peng Vang. I am a student at University of Minnesota Web Dev Boot Camp.
+                    Random fact about me: I like cars, motorcycles, and guitars.
                 </p>
-
-                <p>This is test test test test test</p>
             </div>
         </section>
 
         <section id="random2">
-            <h2>More Random</h2>
-            <div class ="random02">
+            <h2>Random</h2>
+            <div class="random02">
                 <p>
-                    Hello, my name is Peng Vang. I am a student at University of Minnesota Web Dev Boot Camp.
+                    Here is a random box. Enjoy this random box. Thanks.
                 </p>
-
-                <p>This is test test test test test</p>
             </div>
         </section>
 
-        
-     </main>
+
+    </main>
 </body>
 <br>
 <hr>
 <footer id="contact">
     <h2 class="foot">Contact info</h2>
     <section id="contact">
-    <div class="contact">
-        <a href="tel:+5555555555">Contact Number</a>
-        <a href="Mailto:random@random.com">Email</a>
-        <a href="http://github.com/Penguuuu">Github</a>
-    </div>
-</section>
+        <div class="contact">
+            <a href="tel:+5555555555">Contact Number</a>
+            <a href="Mailto:random@random.com">Email</a>
+            <a href="http://github.com/Penguuuu">Github</a>
+        </div>
+    </section>
 </footer>
+
 </html>
